emf-services/emf-device/src/snapshots/emf_device__tests__upserts_only.snap
---
source: emf-services/emf-device/src/lib.rs
expression: xs
---
[
    Target {
        state: "mounted",
        name: "mdt1",
        dev_path: None,
        active_host_id: Some(
            1,
        ),
        host_ids: [
            2,
        ],
        filesystems: [
            "fs1",
        ],
        uuid: "123456",
        mount_path: Some(
            "/mnt/mdt1",
        ),
        fs_type: Some(
            Ldiskfs,
        ),
    },
    Target {
        state: "mounted",
        name: "ost1",
        dev_path: Some(
            "/dev/mapper/mpathz",
        ),
        active_host_id: Some(
            3,
        ),
        host_ids: [
            4,
        ],
        filesystems: [
            "fs1",
        ],
        uuid: "567890",
        mount_path: Some(
            "/mnt/ost1",
        ),
        fs_type: Some(
            Ldiskfs,
        ),
    },
]
